New in SVN (will be 0.11)
-------------------------

* Fixed issue 129: make it work around a prblem with KeepTogether in RL 2.1
  it probably makes the output look worse in some cases when using that.
  RL 2.1 is not really supported, so added a warning.
* Fixed issue 130: use os.pathsep instead of ":" since ":" in windows is used
  in disk names (and we still pay for DOS idiocy, in 2009)
* Fixed issue 128: headings level 3+ all looked the same
* Ugly bugfix for Issue 127: crashes when using images in header + TOC
* New tstyles section in the stylesheet provides more configurable list layouts 
  and more powerful table styling.
* Better syntax highlighting (supports bold/italic)
* Workaround for issue 103 so you can use borderPadding as a list (but it will look wrong
  if you are using wordaxe <= 0.3.2) 
* Added fieldvalue style for field lists
* Added optionlist tstyle, for option lists
* Added collection of utility stylesheets and documented it
* Improved command line parsing and stylesheet loading (guess
  extension like latest rst2latex does)
* Fixed Issue 67: completely new list layouting code
* Fixed Issue 116: crashes caused by huge images
* Better support for %width in images, n2ow it's % of the container frame's
  width, not of the text area.
* Fixed bug in SVG scaling
* Better handling of missing images
* Added missing styles abstract, contents, dedication to the default stylesheet
* Tables style support spaceBefore and spaceAfter
* New topic-title style for topic titles (obvious ;-)
* Vertical alignment for inline images (:align: parameter)
* Issue 118: Support for :scale: in images and handle resizing of inline images
* Issue 119: Fix placement of headers and footers
* New background property for page templates (nice for presentations, for example)
* Default to px for image width specifications instead of pt
* Support all required measurement units ("em" "ex" "px" "in" "cm" 
  "mm" "pt" "pc" "%" "")