@@ -1,0 +1,3 @@
+{"pageSetup": {"margin-left": "1cm",
+               "margin-right": "1cm",
+               "firstTemplate": "twoColumn"}}
